2004-05-21 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCopt.c (killDeadCode): fixed bug #907733
	* support/Util/SDCCerr.c: reworded E_AUTO_ASSUMED diagnostic to clarify
	that the variable, not the function, should be static
	* src/SDCCval.c (valCastLiteral): fixed bit initialization from literal
	to be consistent with non-literal case

2004-05-19 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCast.c (isConformingBody): fixed bug #949967
	* src/SDCCopt.c (cnvToFcall, cnvToFloatCast, cnvFromFloatCast,
	convilong): fixed bug #952086

2004-05-18 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCmem.c (allocVariables): fixed bug #955321

2004-05-18 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/main.c (_hc08_genAssemblerEnd),
	* src/SDCCdwarf2.c (dwOpenFile, dwCloseFile, dwWriteFunction,
	dwWriteModule, dwWriteCLine, dwWriteALine, dwarf2FinalizeFile):
	completely eliminated the use of a temporary file
	* src/SDCCdwarf2.c (dwWriteAttr): fixed bug with location list offset
	when more than one file linked
	* src/SDCCloop.c (pointerAssigned): fixed bug #954163

2004-05-17 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCval.c (valForArray): applied Maarten Brock's patch #947682
	which fixes bug #543481
	* support/regression/tests/bug-751703.c: fixed comments left from a
	cut and paste error
	* src/SDCCdwarf2.c (dwCloseFile): don't explicitly close a temp file
	* src/SDCCdwarf2.c (dwTagFromType): added bitfield support
	* src/SDCCdwarf2.c (dwWriteSymbolInternal): handle extern within local
	scopes
	* src/SDCCdwarf2.c (dwWriteLineNumber): line number deltas are signed
	* src/SDCCmain.c (processFile, parseCmdLine): non-alphanumeric chars
	are now	changed to underscores in moduleName

2004-05-15 Jesus Calvino-Fraga <jesusc AT ece.ubc.ca>

	* as/mcs51/lkmem.c: better fix for bug #954173

2004-05-15 Maarten Brock <sourceforge.brock AT dse.nl>
	committed by Frieder Ferlemann <Frieder.Ferlemann AT web.de>
